# osqp-feasibility-test

./: CMakeLists.txt  OsqpFeasibility.cpp
misc/: data.mat
